/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
    id 'maven-publish'
}

repositories {
    mavenCentral()

    maven {
        url = uri('https://repo.md-5.net/content/repositories/snapshots/')
    }

    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}

dependencies {
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'org.slf4j:slf4j-api:2.0.13'
    implementation 'org.apache.logging.log4j:log4j-slf4j2-impl:2.23.1'
    implementation 'org.apache.logging.log4j:log4j-core:2.23.1'
    implementation 'commons-io:commons-io:20030203.000550'
    implementation 'io.netty:netty-all:4.1.109.Final'
    implementation 'commons-lang:commons-lang:20030203.000129'
    implementation 'net.lingala.zip4j:zip4j:2.11.5'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.17.0'
    implementation 'javax.activation:activation:1.1.1'
}

group = 'net.cubespace.dynmap'
version = '0.5.7.0-beta2'
description = 'Dynmap-MultiServer'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

application {
    mainClass = 'net.cubespace.dynmap.multiserver.Main'
}

shadowJar {
    archiveClassifier = 'shade'
}

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}
